# read-protobuf

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  read_protobuf.py  setup.cfg  setup.py
tests/: conftest.py  demo.ipynb  demo.proto  demo_pb2.py  test_read.py
